--- a/mwanikibuses/bookings/templates/template.html
+++ b/mwanikibuses/bookings/templates/template.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
     <body>
-
         <table>
             <tr>
-                <th>name</th>
-                <th>destination</th>
+                <th>Name</th>
+                <th>Destination</th>
                 <th>seat</th>
                 <th>id number</th>
             </tr>
-
             {% for x in cust %}
             <tr>
-                <td> {{x.Customer_name}} </td>
-                <td> {{x.destination}} </td>
-                <td> {{x.seatno}} </td>
-                <td> {{x.Id_number}} </td>
+                <td>
+                    {{x.Customer_name}} 
+                </td>
+                <td>
+                    {{x.destination}}
+                </td>
+                <td> 
+                    {{x.seatno}} 
+                </td>
+                <td> 
+                    {{x.Id_number}} 
+                </td>
             </tr>
             {% endfor %}
         </table>
